<resources>
    <string name="app_name">FinAI</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fin_ai_helps_you_calculate_house_prices_and_eligibility_for_lending_aided_by_intelligent_design">Fin - AI helps you calculate house prices and eligibility for lending aided by intelligent design.</string>
    <string name="sign_inLogin">Sign In</string>
    <string name="registerLogin">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_nav">MainNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fin AI</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="officer_info">Officer Info</string>
    <string name="loan_suitability">Loan Suitability</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_officer">Phone Officer</string>
    <string name="make_a_payment">Make a Payment</string>
    <string name="Home_Message">Welcome to Fin-AI</string>
    <string name="registerReg">Register</string>
    <string name="sign_inReg">Sign In</string>
    <string name="sign_inMain">Sign In</string>
    <string name="registerMain">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="house_quotation_calculator">House Quotation Calculator</string>
    <string name="applicantincome">ApplicantIncome</string>
    <string name="coapplicantincome">Coapplicantincome</string>
    <string name="LoanSuitabilityBody">Complete the form here and our AI can tell you in just a few moments if are eligible.</string>
    <string name="loan_amount_hint">Loan Amount</string>
    <string name="LoanAmountTermHint">Loan Amount Term</string>
    <string name="submit">SUBMIT</string>
    <string name="maleForm">Male</string>
    <string name="femaleForm">Female</string>
    <string name="dependentsForm">Dependents</string>
    <string name="loansuitabilityForm">LoanSuitability</string>
    <string name="graduateForm">Graduate</string>
    <string name="non_graduateForm">Non Graduate</string>
    <string name="self_employedForm">Self Employed</string>
    <string name="not_self_employedForm">Not Self Employed</string>
    <string name="credit_historyForm">Credit History</string>
    <string name="no_credit_historyForm">No Credit History</string>
    <string name="urbanFormButton">Urban</string>
    <string name="ruralformButton">Rural</string>
    <string name="semi_urbanFormButton">Semi-Urban</string>
    <string name="house_quotation_calculatorHeader">House Quotation Calculator</string>
    <string name="bedroomsForm">Bedrooms</string>
    <string name="square_footage_of_living_spaceForm">Square Footage of Living Space</string>
    <string name="square_footage_of_the_lotForm">Square Footage of the lot.</string>
    <string name="number_of_floorsFormHint">Number of floors, e.g 1, 1.5, 2</string>
    <string name="viewsFormHint">Views, e.g 0, 1, 2, 3, 4</string>
    <string name="sqftAboveFormHint">Square Foot Above Ground</string>
    <string name="sqftBasement">Square Footage of Basement</string>
    <string name="yearBuiltFormHint">What year was the house built</string>
    <string name="yearRenovatedFormHint">What year was the house renovated, if never type 0</string>
    <string name="sqftAbovePastForm">Square Foot Above Ground Past</string>
    <string name="sqftBelowPastForm">Square Foot Lot Ground Past</string>

    <string name="loanSuitabilitydialogue_messageYes">Successful</string>
    <string name="loanSuitabilitydialogue_messageNo">Unsuccessful</string>
    <string name="loanSuitabilitydialogue_title">Loan Suitability Result</string>
    <string name="houseQuotatationdialogue_title">House Quotation Result</string>
    <string name="contact_detailsHeader">Contact Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="make_a_support_request">Make a Support Request</string>

</resources>