<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_officer_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/officer_info" />
        <item
            android:id="@+id/nav_loan_suitability"
            android:icon="@drawable/ic_baseline_psychology_24"
            android:title="@string/loan_suitability" />
        <item
            android:id="@+id/nav_house_quotation"
            android:icon="@drawable/ic_baseline_house_siding_24"
            android:title="@string/house_quotation_calculator" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/make_a_payment" />
        <item
            android:id="@+id/nav_phone_officer"
            android:icon="@drawable/ic_baseline_local_phone_24"
            android:title="@string/phone_officer" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/make_a_support_request" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>