<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">


    <TextView
        android:id="@+id/LoanSuitabilityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:text="@string/loansuitabilityForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoanSuitabilityBody"
        android:layout_width="235dp"
        android:layout_height="37dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:text="@string/LoanSuitabilityBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoanSuitabilityHeader" />


    <RadioGroup
        android:id="@+id/GenderGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoanSuitabilityBody">

        <RadioButton
            android:id="@+id/MaleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maleForm" />

        <RadioButton
            android:id="@+id/FemaleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/femaleForm" />
    </RadioGroup>

    <EditText
        android:id="@+id/Dependents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/dependentsForm"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/EducationGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenderGroup"
        app:layout_constraintVertical_bias="0.292"
        android:autofillHints="Number of dependents" />

    <RadioGroup
        android:id="@+id/EducationGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/SelfEmployedGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dependents">

        <RadioButton
            android:id="@+id/graduateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graduateForm" />

        <RadioButton
            android:id="@+id/nongraduateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_graduateForm" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/SelfEmployedGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EducationGroup">

        <RadioButton
            android:id="@+id/selfEmployedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/self_employedForm" />

        <RadioButton
            android:id="@+id/nonselfEmployedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_self_employedForm" />
    </RadioGroup>

    <EditText
        android:id="@+id/ApplicantIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/applicantincome"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelfEmployedGroup" />

    <EditText
        android:id="@+id/CoApplicantIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/coapplicantincome"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApplicantIncome" />

    <EditText
        android:id="@+id/LoanAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/loan_amount_hint"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoApplicantIncome" />

    <EditText
        android:id="@+id/LoanAmountTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/LoanAmountTermHint"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoanAmount" />

    <RadioGroup
        android:id="@+id/CreditHistoryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:orientation="horizontal"
        android:autofillHints="Do you have a credit history?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoanAmountTerm">

        <RadioButton
            android:id="@+id/creditHistoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_historyForm" />

        <RadioButton
            android:id="@+id/noCreditHistoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_credit_historyForm" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/PropertyAreaGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreditHistoryGroup">

        <RadioButton
            android:id="@+id/urbanFormButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urbanFormButton" />

        <RadioButton
            android:id="@+id/ruralFormButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruralformButton" />

        <RadioButton
            android:id="@+id/semiurbanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semi_urbanFormButton" />
    </RadioGroup>

    <Button
        android:id="@+id/SubmitLoanSuitability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="40dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PropertyAreaGroup"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>